[gd_scene load_steps=3 format=3 uid="uid://cg8n57xuwmtnd"]

[ext_resource type="Script" uid="uid://dyggnquyen71j" path="res://menu.gd" id="1_lti8b"]

[sub_resource type="LabelSettings" id="LabelSettings_ouk20"]
font_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_right = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
vertical = true

[node name="host" type="Button" parent="CanvasLayer/HBoxContainer/BoxContainer"]
layout_mode = 2
text = "HOST"

[node name="join" type="Button" parent="CanvasLayer/HBoxContainer/BoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="Host&Play" type="Button" parent="CanvasLayer/HBoxContainer/BoxContainer"]
layout_mode = 2
text = "Host&Play"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/HBoxContainer/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/BoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ouk20")

[connection signal="pressed" from="CanvasLayer/HBoxContainer/BoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/BoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/BoxContainer/Host&Play" to="." method="_on_host_play_pressed"]
